feat(docs): add method to generate swagger 3.0
