# docs/swagger/swagger.yaml
@@ -1574,7 +1574,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Login
       tags:
-      - auth
+      - Auth
   /auth/signup:
     post:
       consumes:
@@ -1600,7 +1600,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Sign up
       tags:
-      - auth
+      - Auth
   /customers:
     get:
       consumes:
@@ -1649,7 +1649,7 @@ paths:
       - BearerAuth: []
       summary: Get customers
       tags:
-      - customers
+      - Customers
     post:
       consumes:
       - application/json
@@ -1680,7 +1680,7 @@ paths:
       - BearerAuth: []
       summary: Create a customer
       tags:
-      - customers
+      - Customers
   /customers/{id}:
     delete:
       consumes:
@@ -1709,7 +1709,7 @@ paths:
       - BearerAuth: []
       summary: Delete a customer
       tags:
-      - customers
+      - Customers
     get:
       consumes:
       - application/json
@@ -1739,7 +1739,7 @@ paths:
       - BearerAuth: []
       summary: Get a customer
       tags:
-      - customers
+      - Customers
     put:
       consumes:
       - application/json
@@ -1775,7 +1775,7 @@ paths:
       - BearerAuth: []
       summary: Update a customer
       tags:
-      - customers
+      - Customers
   /customers/{id}/wallets:
     get:
       consumes:
@@ -1808,7 +1808,7 @@ paths:
       - BearerAuth: []
       summary: Get wallets by customer ID
       tags:
-      - wallets
+      - Wallets
   /environments:
     get:
       consumes:
@@ -1857,7 +1857,7 @@ paths:
       - BearerAuth: []
       summary: Get environments
       tags:
-      - environments
+      - Environments
     post:
       consumes:
       - application/json
@@ -1888,7 +1888,7 @@ paths:
       - BearerAuth: []
       summary: Create an environment
       tags:
-      - environments
+      - Environments
   /environments/{id}:
     get:
       consumes:
@@ -1923,7 +1923,7 @@ paths:
       - BearerAuth: []
       summary: Get an environment
       tags:
-      - environments
+      - Environments
     put:
       consumes:
       - application/json
@@ -1963,7 +1963,7 @@ paths:
       - BearerAuth: []
       summary: Update an environment
       tags:
-      - environments
+      - Environments
   /events:
     get:
       description: Retrieve raw events with pagination and filtering
@@ -2015,7 +2015,7 @@ paths:
       - BearerAuth: []
       summary: Get raw events
       tags:
-      - events
+      - Events
     post:
       consumes:
       - application/json
@@ -2048,7 +2048,7 @@ paths:
       - BearerAuth: []
       summary: Ingest event
       tags:
-      - events
+      - Events
   /events/usage:
     post:
       description: Retrieve aggregated usage statistics for events
@@ -2078,7 +2078,7 @@ paths:
       - BearerAuth: []
       summary: Get usage statistics
       tags:
-      - events
+      - Events
   /events/usage/meter:
     post:
       description: Retrieve aggregated usage statistics using meter configuration
@@ -2112,7 +2112,7 @@ paths:
       - BearerAuth: []
       summary: Get usage by meter
       tags:
-      - events
+      - Events
   /invoices:
     get:
       consumes:
@@ -2171,7 +2171,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: List invoices
       tags:
-      - invoices
+      - Invoices
     post:
       consumes:
       - application/json
@@ -2200,7 +2200,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Create a new invoice
       tags:
-      - invoices
+      - Invoices
   /invoices/{id}:
     get:
       consumes:
@@ -2229,7 +2229,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Get an invoice by ID
       tags:
-      - invoices
+      - Invoices
   /invoices/{id}/finalize:
     post:
       consumes:
@@ -2258,7 +2258,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Finalize an invoice
       tags:
-      - invoices
+      - Invoices
   /invoices/{id}/payment:
     put:
       consumes:
@@ -2299,7 +2299,7 @@ paths:
       - BearerAuth: []
       summary: Update invoice payment status
       tags:
-      - invoices
+      - Invoices
   /invoices/{id}/void:
     post:
       consumes:
@@ -2328,7 +2328,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Void an invoice
       tags:
-      - invoices
+      - Invoices
   /meters:
     get:
       description: Get all meters
@@ -2349,7 +2349,7 @@ paths:
       - BearerAuth: []
       summary: List meters
       tags:
-      - meters
+      - Meters
     post:
       consumes:
       - application/json
@@ -2380,7 +2380,7 @@ paths:
       - BearerAuth: []
       summary: Create meter
       tags:
-      - meters
+      - Meters
   /meters/{id}:
     delete:
       description: Delete an existing meter
@@ -2411,7 +2411,7 @@ paths:
       - BearerAuth: []
       summary: Delete meter
       tags:
-      - meters
+      - Meters
     get:
       description: Get a specific meter by ID
       parameters:
@@ -2439,7 +2439,7 @@ paths:
       - BearerAuth: []
       summary: Get meter
       tags:
-      - meters
+      - Meters
     put:
       consumes:
       - application/json
@@ -2479,7 +2479,7 @@ paths:
       - BearerAuth: []
       summary: Update meter
       tags:
-      - meters
+      - Meters
   /meters/{id}/disable:
     post:
       description: Disable an existing meter
@@ -2510,7 +2510,7 @@ paths:
       - BearerAuth: []
       summary: 'Disable meter [TODO: Deprecate]'
       tags:
-      - meters
+      - Meters
   /plans:
     get:
       consumes:
@@ -2559,7 +2559,7 @@ paths:
       - BearerAuth: []
       summary: Get plans
       tags:
-      - plans
+      - Plans
     post:
       consumes:
       - application/json
@@ -2590,7 +2590,7 @@ paths:
       - BearerAuth: []
       summary: Create a new plan
       tags:
-      - plans
+      - Plans
   /plans/{id}:
     delete:
       consumes:
@@ -2621,7 +2621,7 @@ paths:
       - BearerAuth: []
       summary: Delete a plan by ID
       tags:
-      - plans
+      - Plans
     get:
       consumes:
       - application/json
@@ -2651,7 +2651,7 @@ paths:
       - BearerAuth: []
       summary: Get a plan by ID
       tags:
-      - plans
+      - Plans
     put:
       consumes:
       - application/json
@@ -2687,7 +2687,7 @@ paths:
       - BearerAuth: []
       summary: Update a plan by ID
       tags:
-      - plans
+      - Plans
   /prices:
     get:
       consumes:
@@ -2736,7 +2736,7 @@ paths:
       - BearerAuth: []
       summary: Get prices
       tags:
-      - prices
+      - Prices
     post:
       consumes:
       - application/json
@@ -2767,7 +2767,7 @@ paths:
       - BearerAuth: []
       summary: Create a new price
       tags:
-      - prices
+      - Prices
   /prices/{id}:
     delete:
       consumes:
@@ -2798,7 +2798,7 @@ paths:
       - BearerAuth: []
       summary: Delete a price
       tags:
-      - prices
+      - Prices
     get:
       consumes:
       - application/json
@@ -2828,7 +2828,7 @@ paths:
       - BearerAuth: []
       summary: Get a price by ID
       tags:
-      - prices
+      - Prices
     put:
       consumes:
       - application/json
@@ -2864,7 +2864,7 @@ paths:
       - BearerAuth: []
       summary: Update a price
       tags:
-      - prices
+      - Prices
   /subscriptions:
     get:
       description: Get subscriptions with optional filtering
@@ -2908,7 +2908,7 @@ paths:
       - BearerAuth: []
       summary: List subscriptions
       tags:
-      - subscriptions
+      - Subscriptions
     post:
       consumes:
       - application/json
@@ -2939,7 +2939,7 @@ paths:
       - BearerAuth: []
       summary: Create subscription
       tags:
-      - subscriptions
+      - Subscriptions
   /subscriptions/{id}:
     get:
       description: Get a subscription by ID
@@ -2968,7 +2968,7 @@ paths:
       - BearerAuth: []
       summary: Get subscription
       tags:
-      - subscriptions
+      - Subscriptions
   /subscriptions/{id}/cancel:
     post:
       consumes:
@@ -3003,7 +3003,7 @@ paths:
       - BearerAuth: []
       summary: Cancel subscription
       tags:
-      - subscriptions
+      - Subscriptions
   /subscriptions/usage:
     post:
       description: Get usage by subscription
@@ -3033,7 +3033,7 @@ paths:
       - BearerAuth: []
       summary: Get usage by subscription
       tags:
-      - subscriptions
+      - Subscriptions
   /tenants:
     post:
       consumes:
@@ -3065,7 +3065,7 @@ paths:
       - BearerAuth: []
       summary: Create a new tenant
       tags:
-      - tenants
+      - Tenants
   /tenants/{id}:
     get:
       consumes:
@@ -3096,7 +3096,7 @@ paths:
       - BearerAuth: []
       summary: Get tenant by ID
       tags:
-      - tenants
+      - Tenants
   /users/me:
     get:
       consumes:
@@ -3117,7 +3117,7 @@ paths:
       - BearerAuth: []
       summary: Get user info
       tags:
-      - users
+      - Users
   /wallets:
     post:
       consumes:
@@ -3149,7 +3149,7 @@ paths:
       - BearerAuth: []
       summary: Create a new wallet
       tags:
-      - wallets
+      - Wallets
   /wallets/{id}:
     get:
       consumes:
@@ -3184,7 +3184,7 @@ paths:
       - BearerAuth: []
       summary: Get wallet by ID
       tags:
-      - wallets
+      - Wallets
   /wallets/{id}/balance/real-time:
     get:
       consumes:
@@ -3219,7 +3219,7 @@ paths:
       - BearerAuth: []
       summary: Get wallet balance
       tags:
-      - wallets
+      - Wallets
   /wallets/{id}/terminate:
     post:
       consumes:
@@ -3252,7 +3252,7 @@ paths:
             $ref: '#/definitions/v1.ErrorResponse'
       summary: Terminate a wallet
       tags:
-      - wallets
+      - Wallets
   /wallets/{id}/top-up:
     post:
       consumes:
@@ -3293,7 +3293,7 @@ paths:
       - BearerAuth: []
       summary: Top up wallet
       tags:
-      - wallets
+      - Wallets
   /wallets/{id}/transactions:
     get:
       consumes:
@@ -3351,7 +3351,7 @@ paths:
       - BearerAuth: []
       summary: Get wallet transactions
       tags:
-      - wallets
+      - Wallets
 schemes:
 - http
 - https
